<resources>

    <string name="app_name">App</string>
    <string name="rep">REPETIDAS</string>
    <string name="off">Apagado!</string>
    <string name="sila">Cantidad de Figuritas</string>
    <string name="nola">Pendientes</string>
    <string name="yala">Repetidas</string>
    <string name="car">Carro</string>
    <string name="nombre">Nombre</string>
    <string name="faltan">Cantidad de repetidas</string>

</resources>
