<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/copita">

        <Button
            android:id="@+id/botonRepetidas"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:background="#000acc"
            android:text="@string/yala"
            android:onClick="clickMainMenu"/>

        <Button
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="99dp"
            android:background="#000acc"
            android:text="@string/nola" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="#000acc"
            android:id="@+id/carrito"
            android:src="@drawable/ic_action_carrito" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="75dp"
            android:id="@+id/aniadir"
            android:onClick="clickMainMenu"
            android:background="@drawable/ic_action_add" />

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/compartir"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="62dp"
            android:background="@drawable/ic_action_compartir" />

        <ImageView
            android:layout_width="144dp"
            android:layout_height="125dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="83dp"
            android:src="@drawable/profilepic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="144dp"
                android:layout_marginTop="100dp"
                android:text="@string/nombre"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/nombre"
                android:layout_marginTop="200dp"
                android:text="@string/faltan"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/fig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/nombre"
                android:layout_below="@+id/nombre"
                android:text="@string/sila"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>